<resources>
    <string name="app_name" translatable="false">2B CopyCat</string>
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="deals">Deals</string>
    <string name="notifications">Notifications</string>
    <string name="account">Account</string>
    <string name="home_fragment" translatable="false">Home Fragment</string>
    <string name="categories_fragment" translatable="false">Categories Fragment</string>
    <string name="deals_fragment" translatable="false">Deals Fragment</string>
    <string name="notifications_fragment" translatable="false">Notifications Fragment</string>
    <string name="account_fragment" translatable="false">Account Fragment</string>
    <string name="search_fragment" translatable="false">Search Fragment</string>
    <string name="pref">Preferences</string>
    <string name="change_language">Change Language</string>
    <string name="change_language_content_desc">Change language</string>
    <string name="search_hint">Search for product …</string>
    <string name="laptops_offers">Laptops Offers</string>
    <string name="laptops">Laptops</string>
    <string name="price_starts_from">price starts from</string>
    <string name="laptop_price">6999 EGP</string>
    <string name="shop_now">Shop Now</string>
    <string name="laptop_image_content_desc">Laptop Image</string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>
    <string name="list">List</string>
    <string name="grid">Grid</string>
    <string name="sort_by">Sort By</string>
    <string name="position_low_to_high">Position Low To High</string>
    <string name="position_high_to_low">Position High To Low</string>
    <string name="price_low_to_high">Price Low To High</string>
    <string name="price_high_to_low">Price High To Low</string>
    <string name="quantity_low_to_high">Quantity Low To High</string>
    <string name="quantity_high_to_low">Quantity High To Low</string>
    <string name="filter_by">Filter By</string>
    <string name="category">Category</string>
    <string name="color">Color</string>
    <string name="process">Process</string>
    <string name="reset">Reset</string>
    <string name="signed_in_as">Signed in as:</string>
    <string name="logout">Logout</string>

    // Facebook Integration
    <string name="facebook_app_id" translatable="false">3424576437759069</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb3424576437759069</string>
    <string name="facebook_client_token" translatable="false">a45169284fb6f09296aaacbfe7adfee5ed8ce0fc73c74019f697e31e83b41660</string>
    <string name="facebook_base_client_token" translatable="false">4fdf01c288d3b387452b229aee4bf09e</string>
    <string name="date_of_birth">Date of Birth</string>
</resources>