<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/home_icon"
        android:title="@string/home" />

    <item
        android:id="@+id/categoriesFragment"
        android:icon="@drawable/categories_icon"
        android:title="@string/categories" />

    <item
        android:id="@+id/dealsFragment"
        android:icon="@drawable/deals_icon"
        android:title="@string/deals" />

    <item
        android:id="@+id/notificationsFragment"
        android:icon="@drawable/notifications_icon"
        android:title="@string/notifications" />

    <item
        android:id="@+id/accountFragment"
        android:icon="@drawable/account_icon"
        android:title="@string/account" />
</menu>