<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <TextView
        android:id="@+id/sort_by"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/sort_by"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:textColor="@color/black"
        android:id="@+id/position_l_t_h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/position_low_to_high"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sort_by" />

    <ImageView
        android:id="@+id/checkbox1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/checked"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/position_l_t_h"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/quantity_l_t_h"
        app:layout_constraintTop_toTopOf="@id/position_l_t_h"
        app:tint="@color/orange" />

    <TextView
        android:textColor="@color/black"
        android:id="@+id/position_h_t_l"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/position_high_to_low"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/position_l_t_h" />

    <ImageView
        android:id="@+id/checkbox2"
        android:layout_width="0dp"
        app:layout_constraintStart_toEndOf="@id/position_h_t_l"
        android:layout_height="0dp"
        android:src="@drawable/checked"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/position_h_t_l"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/position_h_t_l"
        app:tint="@color/orange" />

    <TextView
        android:textColor="@color/black"
        android:id="@+id/price_l_t_h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/price_low_to_high"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/position_h_t_l" />

    <ImageView
        app:layout_constraintStart_toEndOf="@id/price_l_t_h"
        android:id="@+id/checkbox3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/checked"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/price_l_t_h"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/price_l_t_h"
        app:tint="@color/orange" />

    <TextView
        android:textColor="@color/black"
        android:id="@+id/price_h_t_l"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/price_high_to_low"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/price_l_t_h" />

    <ImageView
        android:id="@+id/checkbox4"
        android:layout_width="0dp"
        app:layout_constraintStart_toEndOf="@id/price_h_t_l"
        android:layout_height="0dp"
        android:src="@drawable/checked"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/price_h_t_l"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/price_h_t_l"
        app:tint="@color/orange" />

    <TextView
        android:textColor="@color/black"
        android:id="@+id/quantity_l_t_h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/quantity_low_to_high"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/price_h_t_l" />

    <ImageView
        android:id="@+id/checkbox5"
        android:layout_width="0dp"
        app:layout_constraintStart_toEndOf="@id/quantity_l_t_h"
        android:layout_height="0dp"
        android:src="@drawable/checked"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/quantity_l_t_h"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/quantity_l_t_h"
        app:tint="@color/orange" />

    <TextView
        android:textColor="@color/black"
        android:id="@+id/quantity_h_t_l"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/quantity_high_to_low"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/quantity_l_t_h" />

    <ImageView
        android:id="@+id/checkbox6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/checked"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@id/quantity_h_t_l"
        app:layout_constraintBottom_toBottomOf="@id/quantity_h_t_l"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/quantity_h_t_l"
        app:tint="@color/orange" />

</androidx.constraintlayout.widget.ConstraintLayout>